[gd_scene load_steps=25 format=2]

[ext_resource path="res://image/game/pixel_platformer_player/crouch/4.png" type="Texture" id=1]
[ext_resource path="res://image/game/pixel_platformer_player/crouch/3.png" type="Texture" id=2]
[ext_resource path="res://image/game/pixel_platformer_player/crouch/2.png" type="Texture" id=3]
[ext_resource path="res://image/game/pixel_platformer_player/crouch/6.png" type="Texture" id=4]
[ext_resource path="res://image/game/pixel_platformer_player/crouch/1.png" type="Texture" id=5]
[ext_resource path="res://image/game/pixel_platformer_player/crouch/5.png" type="Texture" id=6]
[ext_resource path="res://scene/game_over/game_over.gd" type="Script" id=7]
[ext_resource path="res://image/game/pixel_platformer_player/roll/5.png" type="Texture" id=9]
[ext_resource path="res://image/game/pixel_platformer_player/roll/8.png" type="Texture" id=10]
[ext_resource path="res://image/game/pixel_platformer_player/roll/7.png" type="Texture" id=11]
[ext_resource path="res://image/game/pixel_platformer_player/roll/9.png" type="Texture" id=12]
[ext_resource path="res://image/game/pixel_platformer_player/roll/10.png" type="Texture" id=13]
[ext_resource path="res://image/game/pixel_platformer_player/roll/6.png" type="Texture" id=14]
[ext_resource path="res://image/game/pixel_platformer_player/roll/3.png" type="Texture" id=15]
[ext_resource path="res://image/game/pixel_platformer_player/roll/1.png" type="Texture" id=16]
[ext_resource path="res://image/game/pixel_platformer_player/roll/2.png" type="Texture" id=17]
[ext_resource path="res://image/game/pixel_platformer_player/roll/4.png" type="Texture" id=18]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/hf-free-complete/equipment-pro-v1.1/EquipmentPro.otf"

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://font/hf-free-complete/equipment-pro-v1.1/EquipmentPro.otf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://font/hf-free-complete/equipment-pro-v1.1/EquipmentPro.otf"

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = SubResource( 6 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "roll",
"speed": 10.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -35.6123
margin_top = -17.8062
margin_right = 1040.39
margin_bottom = 609.194
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 349.868
margin_top = 19.4371
margin_right = 674.868
margin_bottom = 109.437
custom_fonts/normal_font = SubResource( 2 )
text = "Game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 191.366
margin_top = 97.4752
margin_right = 870.366
margin_bottom = 150.475
custom_fonts/normal_font = SubResource( 4 )
text = "Infelizmente você não conseguiu fazer seus pagamentos semanais :("
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 355.995
margin_top = 324.334
margin_right = 689.995
margin_bottom = 387.334
custom_fonts/font = SubResource( 7 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="try_again" type="Button" parent="."]
margin_left = 355.123
margin_top = 220.614
margin_right = 689.123
margin_bottom = 283.614
custom_fonts/font = SubResource( 7 )
text = "Tentar Novamente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 119.925, 387.805 )
scale = Vector2( 5, 5 )
frames = SubResource( 5 )
frame = 5
playing = true

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="try_again" to="." method="_on_try_again_pressed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
